--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
-        server: br998
+        server: ftp.programacaodiaria.com.br
         username: pedrogamer212004@gmail.com
         password: Pe212004ho$
         server-dir: public_html/
