--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,6 @@ jobs:
       uses: SamKirkland/FTP-Deploy-Action@v4.3.4
       with:
         server: ns998.hostgator.com.br
-        username: progr879
+        username: pedrogamer212004@gmail.com
         password: Pe212004ho$
         server-dir: public_html/
